--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "sinon": "^1.9.0"
   },
   "dependencies": {
-    "buildmail": "^1.2.0",
-    "hyperquest": "^0.3.0",
-    "libmime": "^0.1.5",
-    "nodemailer-direct-transport": "^1.0.0",
-    "nodemailer-smtp-transport": "^0.1.12"
+    "buildmail": "~1.2.0",
+    "hyperquest": "~0.3.0",
+    "libmime": "~0.1.5",
+    "nodemailer-direct-transport": "~1.0.0",
+    "nodemailer-smtp-transport": "~0.1.12"
   },
   "engines": {
     "node": ">=0.10.0"
